# geerewinde

./: .gitignore  README.md  STYLE-GUIDE.md  meson.build
src/: geerewinde.geresource.xml  main.c  menubar.ui
